package IM.Message;

import "IM.BaseDefine.proto";

option optimize_for = LITE_RUNTIME;

//service id  300

message Message{
	required uint32 type = 1;//1 message,2 group message,3 push message.
	optional ChatMsg chatmsg = 2;
}

message SysMessage{
	required uint32 type = 1;//1 addbuddy,2 buddyVerify
	optional AddBuddy addbuddy = 2;
	optional BuddyVerify buddyVerify = 3;
}

message SubGroup{
	required uint64 subGroupId = 1;
	required string subGroupName = 2;
}

message Buddy{
	required uint64 buddyId = 1;
	required string nickname = 2;
	required uint32 gender = 3;
	required string avatar = 4;
	required uint32 subGroupId = 5;
}

message RecentMsgList{
	//0x3003
	required uint64 uid = 1;
	required uint32 pageSize = 2;
	required uint32 pageId = 3;
}

message RecentMessage{
	required uint32 type = 1;//1 buddy,2 ...
	required uint32 unreads = 2;
	required uint64 curMsgId = 3;
	required string curMsgContent = 4;
	required uint64 curMsgTime = 5;
	optional Buddy buddyInfo = 6;
}

message RecentMsgListAck{
	//0x3004
	repeated RecentMessage recentMsgList = 1;
	required int32 ret = 2;
	optional string errorInfo = 3;
}

message GetOfflineMsg{
	//0x3005
	required uint64 uid = 1;
	required uint32 method = 2;
	required uint64 buddyUid = 3;
	required uint64 groupId = 4;
	required uint64 pullStart = 5;
	required uint32 pullCount = 6;
}

message GetOfflineMsgAck{
	//0x3006
	required uint32 type = 1;
	repeated Message msgList = 2;
	required int32 ret = 3;
	optional string errorInfo = 4;
}

message	GetBuddyGroupList{
	//0x3007
	required uint64 uid = 1;
}

message GetBuddyGroupListAck{
	//0x3008
	required uint64 uid = 1;
	repeated SubGroup subGroupList = 2;
	required int32 ret = 3;
	optional string errorInfo = 4;	
}

message GetBuddyList{
	//0x3009
	required uint64 uid = 1;
	required uint32 deviceType = 2;
	required uint32 subGroupId = 3;
	required uint32 pageSize = 4;
	required uint32 pageId = 5;
}

message GetBuddyListAck{
	//0x300a
	repeated Buddy buddyList = 1;
	required int32 ret = 2;
	optional string errorInfo = 3;
}

message ChatMsg{
	//0x300b
	required uint64 fromUid = 1;
	required string fromNickName = 2;
	required uint32 fromGender = 3;
	required string fromAvatar = 4;
	required uint64 toUid = 5;
	required string toNickName = 6;
	required uint32 toGender = 7;
	required string toAvatar = 8;
	required uint64 msgTime = 9;
	required string content = 10;
	required uint64 msgId = 11;
	required uint32 deviceType = 12;
}

message ChatMsgAck{
	//0x300c
	required uint64 msgId = 1;
	required int32 ret = 2;
	optional string errorInfo = 3;
}

message ReceiveChatMsgAck{
	//0x300d
	required uint64 uid = 1;
	required uint32 deviceType = 2;
	required uint32 type = 3;
	required uint64 buddyUid = 4;
	required uint32 groupId =  5;
	required uint64 msgId = 6;
	required int32 ret = 7;
	optional string errorInfo = 8;
}


message ModifySubGroup{
	//0x300f
	required uint64 uid = 1;
	required uint32 method = 2;
	required uint32 subGroupId = 3;
	required string subGroupName = 4;
	required uint32 moveTo = 5;
}

message ModifySubGroupAck{
	//0x3010
	required int32 ret = 1;
	optional string errorInfo = 2;
}

message AddBuddy{
	//0x3011
	required uint64 requesterId = 1;
	required string requesterNickName = 2;
	required uint32 requesterGender = 3;
	required string requesterAvatar = 4;
	required uint64 buddyUid = 5;
	required uint64 msgId = 6;
	required string vertifyContent = 7;
	required uint32 subGroupId = 8;
}

message AddBuddyAck{
	//0x3012
	required uint64 msgId = 1;
	required int32 ret = 2;
	optional string errorInfo = 3;
}


message BuddyVerify{
	//0x3013
	required uint64 responserId = 1;
	required string responserNickname = 2;
	required uint32 responserGender = 3;
	required string responserAvatar = 4;
	required uint64 buddyUid = 5;
	required uint64 msgId = 6;
	required uint32 agree  = 7;
	required uint32 subGruopId = 8;
}

message BuddyVerityAck{
	//0x3014
	required uint64 msgId = 1;
	required int32 ret = 2;
	optional string errorInfo = 3;
}


message DeleteBuddy{
	//0x3015
	required uint64 uid = 1;
	required uint64 buddyUid = 2;
	required int32 method = 3;
}

message DeleteBuddyAck{
	//0x3016
	required int32 ret = 1;
	optional string errorInfo = 2;	
}

message GetSystemMsgList{
	//0x3017
	required uint64 uid = 1;
}

message GetSystemMsgListAck{
	//0x3018
	repeated SysMessage systemMsgList = 1;
	required int32 ret = 2;
	optional string errorInfo = 3;
}

message LoginReq{
	//0x3019
	required string cstId = 1;
	required string loginToken = 2;
	required uint32 channelType = 3;
	optional string entResNo = 4;
	required uint32 status = 5;
	required bool forceLogin = 6;
	required uint32 deviceType = 7;
	optional string deviceToken = 8;
}

message LoginRes{
	//0x301a
	required uint64 userID = 1;
	required int32 ret = 2;
	optional string errorInfo = 3;
}

message LoginOutReq{
	//0x301b
	required uint64 userID = 1;
	required uint32 deviceType = 2;
}

message LoginOutRes{
	//0x301c
	required int32 ret = 1;
	optional string errorInfo = 2;
}

message ReloginReq{
	//0x301d
	required uint64 userID = 1;
	required uint32 deviceType = 2;
}

message ReloginRes{
	//0x301e
	required int32 ret = 1;
	optional string errorInfo = 2;
}

message PushMsgNotify
{
	//0x3021
	required uint64 fromuid=1;
	required uint32 serverid=2;//网元ID
	required uint32 msgtype=3;
	optional uint64 toid=4;
	required bytes content=5;
	required uint64 msgid=6;
	optional uint32 devicetype=7;
	optional uint64 msgtime=8;
}

message PushMsgRecvedNotify
{
	//0x3023
	required uint64 userId = 1;
	required uint64 plantformId = 2;
	required uint64 msgId = 3;
}

message RecentPushMessage
{
	required uint32 unreads = 1;
	required uint64 plantformId = 2;
	required uint64 msgId = 3;
	required string content = 4;
}

message RecentPushMsgsRsp 
{
	//0x3025
	repeated RecentPushMessage msgList = 1;
	optional IM.BaseDefine.ErrorInfo errorInfo = 2;
}

message GetOfflinePushMsgReq 
{
	//0x3026
	required uint64 userId = 1;
	required uint64 plantformId = 2;
	required uint64 pullStart = 3;
	required uint32 pullCount = 4;
}

message GetOfflinePushMsgRsp 
{
	//0x3027
	repeated PushMsgNotify msgList = 1;
	optional IM.BaseDefine.ErrorInfo errorInfo = 2;
}
